fix: Overflowing table rows on Chrome and Safari

--- a/src/styles/components-ec-style/_dataset_details.scss
+++ b/src/styles/components-ec-style/_dataset_details.scss
@@ -265,8 +265,9 @@
       margin-bottom: 0 !important;
       overflow-y: hidden;
 
-      tr {
-        display: block;
+      td:nth-child(2) {
+        display: inline-block;
+        word-break: break-word;
       }
     }
   }
